Fix spacing & word wrap styling in code blocks

--- a/app/webpacker/styles/code.scss
+++ b/app/webpacker/styles/code.scss
@@ -1,9 +1,8 @@
 code {
   padding: 2px 5px;
-
   font-family: monospace;
-
   background-color: govuk-colour("light-grey");
+  white-space : pre-wrap;
 
   .govuk-panel--confirmation & {
     background-color: transparent;
